[gd_scene load_steps=6 format=3 uid="uid://dw0eb5fu17unx"]

[ext_resource type="Script" path="res://main.gd" id="1_x3hpi"]
[ext_resource type="Script" path="res://keynum.gd" id="2_oudrw"]
[ext_resource type="Script" path="res://Buttonmanager.gd" id="2_udy5k"]
[ext_resource type="Script" path="res://Button.gd" id="3_lxsmt"]
[ext_resource type="Script" path="res://timer.gd" id="4_7mf4k"]

[node name="Main" type="Node2D"]
script = ExtResource("1_x3hpi")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("2_udy5k")

[node name="Timer" type="Timer" parent="Node2D"]
autostart = true
script = ExtResource("4_7mf4k")

[node name="Button" type="Button" parent="Node2D"]
offset_left = 51.0
offset_top = 28.0
offset_right = 312.0
offset_bottom = 138.0
script = ExtResource("3_lxsmt")
buttonnumber = 1

[node name="Button2" type="Button" parent="Node2D"]
offset_left = 337.0
offset_top = 30.0
offset_right = 598.0
offset_bottom = 140.0
script = ExtResource("3_lxsmt")
buttonnumber = 2

[node name="Button3" type="Button" parent="Node2D"]
offset_left = 624.0
offset_top = 34.0
offset_right = 885.0
offset_bottom = 144.0
script = ExtResource("3_lxsmt")
buttonnumber = 3

[node name="Button4" type="Button" parent="Node2D"]
offset_left = 52.0
offset_top = 162.0
offset_right = 313.0
offset_bottom = 272.0
script = ExtResource("3_lxsmt")
buttonnumber = 4

[node name="Button5" type="Button" parent="Node2D"]
offset_left = 336.0
offset_top = 167.0
offset_right = 597.0
offset_bottom = 277.0
script = ExtResource("3_lxsmt")
buttonnumber = 5

[node name="Button6" type="Button" parent="Node2D"]
offset_left = 622.0
offset_top = 161.0
offset_right = 883.0
offset_bottom = 271.0
script = ExtResource("3_lxsmt")
buttonnumber = 6

[node name="Button7" type="Button" parent="Node2D"]
offset_left = 50.0
offset_top = 293.0
offset_right = 311.0
offset_bottom = 403.0
script = ExtResource("3_lxsmt")
buttonnumber = 7

[node name="Button8" type="Button" parent="Node2D"]
offset_left = 336.0
offset_top = 293.0
offset_right = 597.0
offset_bottom = 403.0
script = ExtResource("3_lxsmt")
buttonnumber = 8

[node name="Button9" type="Button" parent="Node2D"]
offset_left = 623.0
offset_top = 293.0
offset_right = 884.0
offset_bottom = 403.0
script = ExtResource("3_lxsmt")
buttonnumber = 9

[node name="Button_#" type="Button" parent="Node2D"]
offset_left = 53.0
offset_top = 422.0
offset_right = 314.0
offset_bottom = 532.0
script = ExtResource("3_lxsmt")
buttonnumber = 9

[node name="Button_*" type="Button" parent="Node2D"]
offset_left = 620.0
offset_top = 422.0
offset_right = 881.0
offset_bottom = 532.0
script = ExtResource("3_lxsmt")
buttonnumber = 9

[node name="Button_0" type="Button" parent="Node2D"]
offset_left = 337.0
offset_top = 420.0
offset_right = 598.0
offset_bottom = 530.0
script = ExtResource("3_lxsmt")
buttonnumber = 9

[node name="Node2D2" type="Node2D" parent="."]
visible = false
script = ExtResource("2_udy5k")

[node name="Button" type="Button" parent="Node2D2"]
offset_left = 51.0
offset_top = 28.0
offset_right = 312.0
offset_bottom = 138.0
script = ExtResource("3_lxsmt")

[node name="Button2" type="Button" parent="Node2D2"]
offset_left = 340.0
offset_top = 28.0
offset_right = 601.0
offset_bottom = 138.0
script = ExtResource("3_lxsmt")

[node name="Button3" type="Button" parent="Node2D2"]
offset_left = 624.0
offset_top = 24.0
offset_right = 885.0
offset_bottom = 134.0
script = ExtResource("2_oudrw")

[node name="Button4" type="Button" parent="Node2D2"]
offset_left = 47.0
offset_top = 173.0
offset_right = 308.0
offset_bottom = 283.0
script = ExtResource("2_oudrw")

[node name="Button5" type="Button" parent="Node2D2"]
offset_left = 337.0
offset_top = 173.0
offset_right = 598.0
offset_bottom = 283.0
script = ExtResource("2_oudrw")

[node name="Button6" type="Button" parent="Node2D2"]
offset_left = 621.0
offset_top = 173.0
offset_right = 882.0
offset_bottom = 283.0
script = ExtResource("2_oudrw")

[node name="Button7" type="Button" parent="Node2D2"]
offset_left = 48.0
offset_top = 311.0
offset_right = 309.0
offset_bottom = 421.0
script = ExtResource("2_oudrw")

[node name="Button8" type="Button" parent="Node2D2"]
offset_left = 335.0
offset_top = 314.0
offset_right = 600.0
offset_bottom = 423.0
script = ExtResource("2_oudrw")

[node name="Button9" type="Button" parent="Node2D2"]
offset_left = 623.0
offset_top = 317.0
offset_right = 881.0
offset_bottom = 425.0
script = ExtResource("2_oudrw")

[connection signal="custom_button_pressed" from="Node2D/Button" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button" to="Node2D/Button" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button" to="Node2D/Button" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button2" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button2" to="Node2D/Button2" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button2" to="Node2D/Button2" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button3" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button3" to="Node2D/Button3" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button3" to="Node2D/Button3" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button4" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button4" to="Node2D/Button4" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button4" to="Node2D/Button4" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button5" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button5" to="Node2D/Button5" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button5" to="Node2D/Button5" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button6" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button6" to="Node2D/Button6" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button6" to="Node2D/Button6" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button7" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button7" to="Node2D/Button7" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button7" to="Node2D/Button7" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button8" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button8" to="Node2D/Button8" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button8" to="Node2D/Button8" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button9" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button9" to="Node2D/Button9" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button9" to="Node2D/Button9" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button_#" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button_#" to="Node2D/Button_#" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button_#" to="Node2D/Button_#" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button_*" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button_*" to="Node2D/Button_*" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button_*" to="Node2D/Button_*" method="_on_pressed"]
[connection signal="custom_button_pressed" from="Node2D/Button_0" to="Node2D" method="_on_button_custom_button_pressed"]
[connection signal="mouse_entered" from="Node2D/Button_0" to="Node2D/Button_0" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D/Button_0" to="Node2D/Button_0" method="_on_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button" to="Node2D2/Button" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button" to="Node2D2" method="_on_button_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button2" to="Node2D2/Button2" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button2" to="Node2D2/Button2" method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button3" to="Node2D2/Button3" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button3" to="Node2D2/Button3" method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button4" to="Node2D2/Button4" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button4" to="Node2D2/Button4" method="_on_button_4_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button5" to="Node2D2/Button5" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button5" to="Node2D2/Button5" method="_on_button_5_pressed"]
[connection signal="pressed" from="Node2D2/Button5" to="Node2D2/Button5" method="_on_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button6" to="Node2D2/Button6" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button6" to="Node2D2" method="_on_button_6_pressed"]
[connection signal="pressed" from="Node2D2/Button6" to="Node2D2/Button6" method="_on_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button7" to="Node2D2/Button7" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button7" to="Node2D2" method="_on_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button8" to="Node2D2/Button8" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button8" to="Node2D2" method="_on_button_8_pressed"]
[connection signal="mouse_entered" from="Node2D2/Button9" to="Node2D2/Button9" method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node2D2/Button9" to="Node2D2" method="_on_button_9_pressed"]
