extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



func _on_button_pressed():
	print("1")


func _on_button_mouse_entered():
	pass # Replace with function body.


func _on_button_2_pressed():
	print("2")


func _on_button_3_pressed():
	print("3")
func _on_button_4_pressed():
	print("4")


func _on_button_5_pressed():
	print("5")


func _on_child_entered_tree(node):
	pass # Replace with function body.
